@@ -882,7 +882,8 @@ OpenDoc_TRANSLATE_BOOKMARKREFS=&R\u00e9f\u00e9rences aux signets
 OpenDoc_TRANSLATE_NOTES=&Notes
 OpenDoc_TRANSLATE_COMMENTS=&Commentaires
 OpenDoc_TRANSLATE_PRES_NOTES=Notes des &pr\u00e9sentations
-OpenDoc_TRANSLATE_LINKS=Liens (&URL)
+OpenDoc_TRANSLATE_LINKS=&Liens (URL)
+OpenDoc_TRANSLATE_SHEET_NAMES=Nom des fe&uilles
 OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
